--- a/package.json
+++ b/package.json
@@ -20,6 +20,7 @@
     "@angular/platform-browser": "^18.0.2",
     "@angular/platform-browser-dynamic": "^18.0.2",
     "@angular/router": "^18.0.2",
+    "@types/jquery": "^3.5.30",
     "alertifyjs": "^1.14.0",
     "bootstrap": "^5.3.3",
     "ngx-spinner": "^17.0.0",
