--- a/package.json
+++ b/package.json
@@ -23,6 +23,7 @@
     "@types/jquery": "^3.5.30",
     "alertifyjs": "^1.14.0",
     "bootstrap": "^5.3.3",
+    "ngx-mat-select-search": "^7.0.6",
     "ngx-spinner": "^17.0.0",
     "ngx-toastr": "^19.0.0",
     "rxjs": "~7.8.1",
