--- a/angular.json
+++ b/angular.json
@@ -37,7 +37,7 @@
               "src/assets"
             ],
             "styles": [
-              "@angular/material/prebuilt-themes/deeppurple-amber.css",
+              "@angular/material/prebuilt-themes/azure-blue.css",
               "src/styles.scss",
               "./node_modules/bootstrap/dist/css/bootstrap.min.css",
               "./node_modules/alertifyjs/build/css/alertify.min.css",
@@ -112,7 +112,8 @@
               "src/assets"
             ],
             "styles": [
-              "@angular/material/prebuilt-themes/deeppurple-amber.css",
+              "@angular/material/prebuilt-themes/azure-blue.css",
+              "node_modules/@kolkov/angular-editor/assets/editor.css",
               "src/styles.scss"
             ],
             "scripts": []
