--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
   },
   "private": true,
   "dependencies": {
+    "@abacritt/angularx-social-login": "^2.3.0",
     "@angular/animations": "^18.0.2",
     "@angular/cdk": "^18.0.2",
     "@angular/common": "^18.0.2",
@@ -20,6 +21,7 @@
     "@angular/platform-browser": "^18.0.2",
     "@angular/platform-browser-dynamic": "^18.0.2",
     "@angular/router": "^18.0.2",
+    "@auth0/angular-jwt": "^5.2.0",
     "@kolkov/angular-editor": "^3.0.0-beta.0",
     "@types/jquery": "^3.5.30",
     "alertifyjs": "^1.14.0",
