--- a/angular.json
+++ b/angular.json
@@ -84,10 +84,10 @@
           "builder": "@angular-devkit/build-angular:dev-server",
           "configurations": {
             "production": {
-              "browserTarget": "ErpaKabloClient:build:production"
+              "buildTarget": "ErpaKabloClient:build:production"
             },
             "development": {
-              "browserTarget": "ErpaKabloClient:build:development"
+              "buildTarget": "ErpaKabloClient:build:development"
             }
           },
           "defaultConfiguration": "development"
@@ -95,7 +95,7 @@
         "extract-i18n": {
           "builder": "@angular-devkit/build-angular:extract-i18n",
           "options": {
-            "browserTarget": "ErpaKabloClient:build"
+            "buildTarget": "ErpaKabloClient:build"
           }
         },
         "test": {
