--- a/package.json
+++ b/package.json
@@ -23,6 +23,7 @@
     "@angular/router": "^18.0.2",
     "@auth0/angular-jwt": "^5.2.0",
     "@kolkov/angular-editor": "^3.0.0-beta.0",
+    "@microsoft/signalr": "^8.0.7",
     "@types/jquery": "^3.5.30",
     "alertifyjs": "^1.14.0",
     "bootstrap": "^5.3.3",
