--- a/package.json
+++ b/package.json
@@ -28,6 +28,7 @@
     "alertifyjs": "^1.14.0",
     "bootstrap": "^5.3.3",
     "bootstrap-icons": "^1.11.3",
+    "chart.js": "^4.4.7",
     "font-awesome": "^4.7.0",
     "ngx-file-drop": "^16.0.0",
     "ngx-mat-select-search": "^7.0.6",
