--- a/angular.json
+++ b/angular.json
@@ -34,7 +34,8 @@
             "inlineStyleLanguage": "scss",
             "assets": [
               "src/favicon.ico",
-              "src/assets"
+              "src/assets",
+              "src/assets/i18n"
             ],
             "styles": [
               "@angular/material/prebuilt-themes/azure-blue.css",
@@ -90,10 +91,12 @@
           "builder": "@angular-devkit/build-angular:dev-server",
           "configurations": {
             "production": {
-              "buildTarget": "ErpaKabloClient:build:production"
+              "buildTarget": "ErpaKabloClient:build:production",
+              "ssl": true
             },
             "development": {
-              "buildTarget": "ErpaKabloClient:build:development"
+              "buildTarget": "ErpaKabloClient:build:development",
+              "ssl": false
             }
           },
           "defaultConfiguration": "development"
@@ -115,7 +118,8 @@
             "inlineStyleLanguage": "scss",
             "assets": [
               "src/favicon.ico",
-              "src/assets"
+              "src/assets",
+              "src/assets/i18n"
             ],
             "styles": [
               "@angular/material/prebuilt-themes/azure-blue.css",
