--- a/.gitignore
+++ b/.gitignore
@@ -20,6 +20,9 @@ yarn-error.log
 .settings/
 *.sublime-workspace
 
+# Ignore environment.prod.ts file
+src/environments/environment.prod.ts
+
 # Visual Studio Code
 .vscode/*
 !.vscode/settings.json
