--- a/angular.json
+++ b/angular.json
@@ -47,8 +47,7 @@
               "node_modules/ngx-toastr/toastr.css",
               "node_modules/ngx-spinner/animations/ball-scale-multiple.css",
               "node_modules/ngx-spinner/animations/ball-spin-clockwise-fade.css",
-              "node_modules/ngx-spinner/animations/line-spin-fade-rotating.css",
-              "node_modules/font-awesome/css/font-awesome.min.css"
+              "node_modules/ngx-spinner/animations/line-spin-fade-rotating.css"
             ],
             "scripts": [
               "./node_modules/bootstrap/dist/js/bootstrap.min.js",
