--- a/package.json
+++ b/package.json
@@ -21,6 +21,7 @@
     "@angular/platform-browser": "^18.0.2",
     "@angular/platform-browser-dynamic": "^18.0.2",
     "@angular/router": "^18.0.2",
+    "@angular/service-worker": "^18.0.2",
     "@auth0/angular-jwt": "^5.2.0",
     "@kolkov/angular-editor": "^3.0.0-beta.0",
     "@microsoft/signalr": "^8.0.7",
